Update window name and modify keywords

--- a/hue-gui.ui
+++ b/hue-gui.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>hue_plus</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QCheckBox" name="channel1Check">
