Add unitled support

--- a/hue-gui.ui
+++ b/hue-gui.ui
@@ -2191,6 +2191,19 @@
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QPushButton" name="unitLEDBtn">
+    <property name="geometry">
+     <rect>
+      <x>840</x>
+      <y>50</y>
+      <width>121</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Toggle Unit LED</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
